--- a/stadiumpy/settings/advancedRF.yaml
+++ b/stadiumpy/settings/advancedRF.yaml
@@ -1,40 +1,39 @@
 filenames:
-  invRFfile: rf_stations.xml #station xml
-  RFsta: all_stations_RF.txt #station text catalog
-  retr_stations: all_stations_rf_retrieved.txt #retrived stations list file
-  data_rf_suffix: rf_profile_data #rf data file name: {net}-{stn}-rf_profile_data.h5
-  events_map_suffix: RF-events_map #events map filename suffix {net}-{stn}-RF-events_map.png
-  retr_station_prefix: RF_stations #retrieved stations prefix
-  rf_compute_data_suffix: rf_profile_rfs #rf computation result file name: network-station-rf_profile_rfs.h5
-  rfprofile_compute_result_prefix: rf_profile_profile #rf profile computation result file name: rf_profile_profile{azimuth}_*.h5
-  
+  allStaXML: rf_stations.xml #station xml
+  allStaTXT: all_stations_RF.txt #station text catalog
+  allRetrStaTXT: all_stations_rf_retrieved.txt #retrived stations list file
+  PRF_data_suffix: rf_profile_data #rf data file name: {net}-{stn}-rf_profile_data.h5
+  PRF_events_map: RF-events_map #events map filename suffix {net}-{stn}-RF-events_map.png
+  PRF_station: RF_stations #retrieved stations prefix
+  PRF_suffix: rf_profile_rfs #rf computation result file name: network-station-rf_profile_rfs.h5
+  PRF_profile: rf_profile_profile #rf profile computation result file name: rf_profile_profile{azimuth}_*.h5
 h_kappa_settings:
-  h_kappa_res_file: h-kappa-values.txt
+  h_kappa_results: h-kappa-values.txt
   plot_h: 1
   plot_kappa: 1
 
 rf_profile_settings:
-  num_profile_divs_lat: 1
-  num_profile_divs_lon: 1
-  ppdepth: 40 #piercing points depth
+  PRF_num_profile_lat: 1
+  PRF_num_profile_lon: 1
+  PRF_ppdepth: 40 #piercing points depth
 
 rf_event_search_settings:
-  minradiusRF: 30 #min radius from each station for events search
-  maxradiusRF: 90 #max radius from each station for events search
-  minmagnitudeRF: 5.5
-  maxmagnitudeRF: 9.5
+  PRF_minradius: 30 #min radius from each station for events search
+  PRF_maxradius: 90 #max radius from each station for events search
+  PRF_minmagnitude: 5.5
+  PRF_maxmagnitude: 9.5
 
 rf_filter_settings:
-  minfreq: 0.05 #stream minfreq for bandpass
-  maxfreq: 0.5 #stream maxfreq for bandpass
+  PRF_minfreq: 0.05 #stream minfreq for bandpass
+  PRF_maxfreq: 0.5 #stream maxfreq for bandpass
   
 rf_display_settings: 
-  trace_height: 0.1 #height of one trace in inches
-  trim_min: -5 #trim stream relative to onset before plotting
-  trim_max: 20 #trim stream relative to onset before plotting
-  rf_info: default #additional axes for RF plot, None for no additional axes
+  PRF_trace_height: 0.1 #height of one trace in inches
+  PRF_trim_min: -5 #trim stream relative to onset before plotting
+  PRF_trim_max: 20 #trim stream relative to onset before plotting
+  PRF_info: default #additional axes for RF plot, None for no additional axes
 rf_plotting_settings:
-  signalrf: 1.0
-  maxampRF: 0.9
-  plot_good_RF: 1
-  plot_bad_RF: 1
+  PRF_signal: 1.0
+  PRF_maxamp: 0.9
+  PRF_plot_good: 1
+  PRF_plot_bad: 1
