--- a/stadiumpy/settings/input_file.yaml
+++ b/stadiumpy/settings/input_file.yaml
@@ -1,7 +1,7 @@
 # PARAMETERS: VALUES
 project_name: Simple_RFSKS_test/
 mode: Automated
-
+project_dir_loc: "./"
 fresh_start: 0 #1 to delete the previous computations
 
 summary_file: summary_file.txt
