--- a/stadiumpy/settings/USER_directories_names.yaml
+++ b/stadiumpy/settings/USER_directories_names.yaml
@@ -5,3 +5,10 @@ RFinfoloc: InfoRF/
 RFplotloc: ImagesRF/RFplots/
 RFprofilemaploc: ImagesRF/Profile/
 RFstaevnloc: ImagesRF/STA_EV/
+SFIndRejplotloc: ImagesSRF/SRF-plot/Rejected/
+SFIndplotloc: ImagesSRF/SRF-plot/
+SFdatafileloc: dataSRF/
+SFinfoloc: InfoSRF/
+SFplotloc: ImagesSRF/SRFplots/
+SFprofilemaploc: ImagesSRF/Profile/
+SFstaevnloc: ImagesSRF/STA_EV/
