--- a/stadiumpy/backend/USER_input_file.yaml
+++ b/stadiumpy/backend/USER_input_file.yaml
@@ -4,9 +4,9 @@ makeSKS: 1
 makeSRF: 1
 mnlat: 20
 mnlong: 119
-mode: 0
+mode: 1
 mxlat: 26
 mxlong: 125
-project_dir_loc: ./
+project_dir_loc: ~/Downloads/
 project_name: Simple_RFSKS_test/
 summary_file: summary_file.txt
